--- a/css/style.css
+++ b/css/style.css
@@ -1184,7 +1184,9 @@ h2 {
   .next-webs__item {
       margin-bottom: 20px;
   }
-
+  .next-webs__last{
+    margin-bottom: 50px;
+  }
   .next-webs__btn {
       text-align: center;
       padding: 25px 0px 40px;
@@ -1235,6 +1237,19 @@ h2 {
   }
 }
 @media (max-width: 850px){
+  
+  .registration {
+    min-height: calc(100vh - 49px);
+    display: flex;
+    align-items: center;
+}
+  .registration__inner{
+    margin-top:0px;
+  }
+  .countdown {
+    justify-content: space-between;
+}
+  
   .blog__inner {
     justify-content: space-around;
     flex-direction: column;
@@ -1273,7 +1288,7 @@ h2 {
   max-width: calc(100% - 20px);
 }
 .accordion.active {
-  height: 210px;
+  height: 100%;
 }
 
 }
@@ -1308,11 +1323,21 @@ h2 {
 
 @media (max-width: 600px) {
   .advantage__items {
-      justify-content: center;
+    justify-content: center;
   }
 }
 @media (max-width: 570px) {
-
+  .countdown{
+    max-width: 280px;
+  }
+  .time-section{
+  padding: 0px 17px;
+}
+  .articles{
+    width:100%;
+    flex-direction: column;
+    align-items: center;
+  }
   .article__double-item {
     max-width: 255px;
     
@@ -1329,8 +1354,16 @@ h2 {
 .pre-hide{
  display: none!important;
 }
+.footer__inner{
+  font-size: 10px;
 }
-
+.footer__left{
+  max-width: 95px;
+}
+.footer__right{
+  max-width: 81px;
+}
+}
 
 
 
