--- a/css/style.css
+++ b/css/style.css
@@ -693,10 +693,18 @@ h2 {
   transform: scale(0.9);
 }
 
-.fancybox-content {
-  max-width: 710px;
-  max-height: 430px;
-  padding: 100px;
+  .fancybox-content {
+    max-width: 100%;
+    max-height: 100%;
+    padding: 20px;
+
+}
+.fancybox-slide--html .fancybox-close-small {
+  right: -10px;
+  top: -10px;
+}
+.video-frame iframe{
+  max-width: 100%;
 }
 
 .video-container__icon .icon-play {
@@ -1214,7 +1222,10 @@ h2 {
       align-items: center;
       padding: 50px 0px;
   }
-
+  .video-frame iframe {
+    max-width: 100%;
+    max-height: 480px;
+}
   .speaker__text {
       margin-right: 0px;
   }
@@ -1338,11 +1349,6 @@ h2 {
   }
 }
 
-@media (max-width: 529px) {
-  .advantage__items {
-    justify-content: center;
-  }
-}
 @media (max-width: 570px) {
   .countdown{
     max-width: 280px;
@@ -1353,6 +1359,9 @@ h2 {
 .registration .orange-text:before {
   display: none;
 }
+.video-frame iframe {
+  max-height: 240px;
+}
   .articles{
     width:100%;
     flex-direction: column;
@@ -1362,6 +1371,7 @@ h2 {
     max-width: 255px;
     
 }
+
   .article__double-image{
   display: none;
 }
@@ -1375,7 +1385,7 @@ h2 {
  display: none!important;
 }
 .footer__inner{
-  font-size: 10px;
+  font-size: 9px;
 }
 .footer__left{
   max-width: 95px;
@@ -1384,7 +1394,11 @@ h2 {
   max-width: 81px;
 }
 }
-
+@media (max-width: 529px) {
+  .advantage__items {
+    justify-content: center;
+  }
+}
 
 
 
