--- a/css/style.css
+++ b/css/style.css
@@ -696,7 +696,8 @@ h2 {
   .fancybox-content {
     max-width: 100%;
     max-height: 100%;
-    padding: 20px;
+    padding: 18px;
+    overflow: hidden;
 
 }
 .fancybox-slide--html .fancybox-close-small {
